# Aronda

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
gui/: CMakeLists.txt  board.cpp  board.hpp  boardwidget.cpp  boardwidget.hpp  gamesquare.cpp  gamesquare.hpp  images.qrc  main.cpp  mainwindow.cpp  mainwindow.hpp  playersstatewidget.cpp  playersstatewidget.hpp
lib/: CMakeLists.txt  board.cpp  board.hpp  forbiddenmove.cpp  forbiddenmove.hpp  game.cpp  game.hpp  move.hpp  player.hpp  square.cpp  square.hpp
lib/utils/: strongtype.hpp
travis-scripts/: build.sh  dependencies.sh
unit_tests/: test_board_move.cpp  test_game.cpp  test_game_move.cpp  test_playable_moves.cpp
